peac_dev/force-app/main/default/objects/Remit_To_Code__mdt/Remit_To_Code__mdt.object-meta.xml
<CustomObject>
    <description>Update Remit To Code. 
SAL-4970</description>
    <label>Remit To Code</label>
    <pluralLabel>Remit To Codes</pluralLabel>
</CustomObject>