peac_dev/force-app/main/default/objects/Remit_To_Code__mdt/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <inlineHelpText>Account name could be same as Dealer Name</inlineHelpText>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>