peac_dev/force-app/main/default/objects/Remit_To_Code__mdt/fields/Lessor__c.field-meta.xml
<CustomField>
    <fullName>Lessor__c</fullName>
    <label>Lessor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>