peac_dev/force-app/main/default/objects/Remit_To_Code__mdt/fields/Loan_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Record_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loan Record Type</label>
    <type>Checkbox</type>
</CustomField>