peac_dev/force-app/main/default/objects/Remit_To_Code__mdt/fields/order__c.field-meta.xml
<CustomField>
    <fullName>order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>