peac_dev/force-app/main/default/objects/Remit_To_Code__mdt/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3D SYSTEMS</fullName>
                <default>true</default>
                <label>3D SYSTEMS</label>
            </value>
            <value>
                <fullName>9 to 5 Seating</fullName>
            </value>
            <value>
                <fullName>ABC</fullName>
            </value>
            <value>
                <fullName>ACCU-TECH</fullName>
            </value>
            <value>
                <fullName>Addup</fullName>
            </value>
            <value>
                <fullName>ADG</fullName>
            </value>
            <value>
                <fullName>ADT</fullName>
            </value>
            <value>
                <fullName>ADTRAN</fullName>
            </value>
            <value>
                <fullName>Advance Auto</fullName>
            </value>
            <value>
                <fullName>AIMED</fullName>
            </value>
            <value>
                <fullName>AirCo</fullName>
            </value>
            <value>
                <fullName>Airefco</fullName>
            </value>
            <value>
                <fullName>AIS</fullName>
            </value>
            <value>
                <fullName>Allied</fullName>
            </value>
            <value>
                <fullName>Allsteel</fullName>
            </value>
            <value>
                <fullName>Alur Walls</fullName>
            </value>
            <value>
                <fullName>AMERICAN DISH</fullName>
            </value>
            <value>
                <fullName>American Standard</fullName>
            </value>
            <value>
                <fullName>APR Supply</fullName>
            </value>
            <value>
                <fullName>Aramsco</fullName>
            </value>
            <value>
                <fullName>Arc3 Gases</fullName>
            </value>
            <value>
                <fullName>ArrowPay</fullName>
            </value>
            <value>
                <fullName>Ascot</fullName>
            </value>
            <value>
                <fullName>Atlas-Copco</fullName>
            </value>
            <value>
                <fullName>Autodesk</fullName>
            </value>
            <value>
                <fullName>Auto Plus</fullName>
            </value>
            <value>
                <fullName>Autoquotes</fullName>
            </value>
            <value>
                <fullName>AutoZone</fullName>
            </value>
            <value>
                <fullName>Avery</fullName>
            </value>
            <value>
                <fullName>AVI-SPL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>