peac_dev/force-app/main/default/objects/Remit_To_Code__mdt/fields/Remit_To_Code__c.field-meta.xml
<CustomField>
    <fullName>Remit_To_Code__c</fullName>
    <label>Remit To Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0001</fullName>
                <label>0001 - Marlin Leasing Corp.</label>
            </value>
            <value>
                <fullName>0098</fullName>
                <label>0098 - American Capital Financial Svc</label>
            </value>
            <value>
                <fullName>0575</fullName>
                <label>0575 - NDS Leasing</label>
            </value>
            <value>
                <fullName>2001</fullName>
                <label>2001 - Marlin Leasing Corp</label>
            </value>
            <value>
                <fullName>9004</fullName>
                <label>9004 - Security of Los Angeles</label>
            </value>
            <value>
                <fullName>9010</fullName>
                <label>9010 - Microshare Technology Finance</label>
            </value>
            <value>
                <fullName>9075</fullName>
                <label>9075 - NDS LEASING</label>
            </value>
            <value>
                <fullName>9082</fullName>
                <label>9082 - Crumbacher Business Systems</label>
            </value>
            <value>
                <fullName>9100</fullName>
                <label>9100 - Digital Copier Associates, Inc</label>
            </value>
            <value>
                <fullName>6002</fullName>
                <label>6002 - MN ID Lease Services</label>
            </value>
            <value>
                <fullName>0101</fullName>
                <label>0101 - Xerox Financial Services</label>
            </value>
            <value>
                <fullName>0102</fullName>
                <label>0102 - MN ID Xerox Financial Services</label>
            </value>
            <value>
                <fullName>9000</fullName>
                <label>9000 - MN ID Marlin Leasing Corporation</label>
            </value>
            <value>
                <fullName>9001</fullName>
                <label>9001 - Marlin Leasing Corporation</label>
            </value>
            <value>
                <fullName>2406</fullName>
                <label>2406 - 360 Document Solutions</label>
            </value>
            <value>
                <fullName>8089</fullName>
                <label>8089 - MN ID Edwards Business Systems</label>
            </value>
            <value>
                <fullName>8090</fullName>
                <label>8090 - MN ID Virginia Business Systems</label>
            </value>
            <value>
                <fullName>8091</fullName>
                <label>8091 - MN ID Kelley Connect Co.</label>
            </value>
            <value>
                <fullName>8092</fullName>
                <label>8092 - MN ID UBEO, LLC</label>
            </value>
            <value>
                <fullName>8093</fullName>
                <label>8093 - MN ID C.D.S. Office Technology</label>
            </value>
            <value>
                <fullName>8097</fullName>
                <label>8097 - MN ID Pacific Office Automation</label>
            </value>
            <value>
                <fullName>8094</fullName>
                <label>8094 - MN ID Xeikon America, Inc.</label>
            </value>
            <value>
                <fullName>8095</fullName>
                <label>8095 - MN ID Atlanta Office Technologies</label>
            </value>
            <value>
                <fullName>9089</fullName>
                <label>9089 - Edwards Business Systems</label>
            </value>
            <value>
                <fullName>9090</fullName>
                <label>9090 - Virginia Business Systems</label>
            </value>
            <value>
                <fullName>9091</fullName>
                <label>9091 - Kelley Connect Co.</label>
            </value>
            <value>
                <fullName>9092</fullName>
                <label>9092 - UBEO, LLC</label>
            </value>
            <value>
                <fullName>9093</fullName>
                <label>9093 - C.D.S. Office Technology</label>
            </value>
            <value>
                <fullName>2403</fullName>
                <label>2403 - Pacific Office Automation</label>
            </value>
            <value>
                <fullName>9094</fullName>
                <label>9094 - Xeikon America, Inc.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>