peac_dev/force-app/main/default/objects/Remit_To_Code__mdt/listViews/All_View.listView-meta.xml
<ListView>
    <fullName>All_View</fullName>
    <columns>MasterLabel</columns>
    <columns>Account_Name__c</columns>
    <columns>DeveloperName</columns>
    <columns>Lessor__c</columns>
    <columns>Loan_Record_Type__c</columns>
    <columns>Program__c</columns>
    <columns>Remit_To_Code__c</columns>
    <columns>State_Equipment_Location__c</columns>
    <columns>order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All View</label>
</ListView>